--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <button class="btn" onclick="append('9')">9</button>
             <button class="btn operator" onclick="appendOperator('*')">*</button>
             <button class="btn" onclick="append('0')">0</button>
-            <button class="btn" onclick="clearDisplay()">AC</button>
-            <button class="btn" onclick="calculate()">=</button>
+            <button class="btn" onclick="clearDisplay()" style="background-color: red;">AC</button>
+            <button class="btn" onclick="calculate()" style="background-color: green;">=</button>
             <button class="btn operator" onclick="appendOperator('/')">/</button>
         </div>
     </div>
